migrate db back to postgres

--- a/web/templates/about.html.j2
+++ b/web/templates/about.html.j2
@@ -13,21 +13,11 @@
 
 <div class="row">
     <div class="col">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nesciunt dicta commodi error velit beatae reprehenderit cumque placeat atque, illo alias, in soluta repellendus quis voluptas modi numquam id ex rem sit expedita dolores. Velit sequi maiores voluptas perferendis perspiciatis, minima molestias aliquid ut, fugit ratione porro vero laborum sed, molestiae tempora qui nostrum, nam fugiat quos doloremque quibusdam distinctio. Eaque optio magnam, velit modi, fugit eveniet dolor quibusdam repellat. Nesciunt quam ipsum, magni ullam? Earum deleniti eaque eveniet ab sequi delectus, molestiae odio voluptatem voluptatibus eius sapiente numquam nemo, tempora! Autem rerum ducimus quibusdam beatae corrupti, voluptatum, doloribus consectetur.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, possimus, doloribus! Illum velit magni deleniti eveniet harum veritatis totam enim explicabo voluptatibus molestias animi iure minus doloribus omnis distinctio doloremque perspiciatis repudiandae labore optio error esse hic sequi, dolore quos. Laudantium qui cum odio dolore eum. Itaque nisi consectetur unde minima numquam voluptate consequatur earum, eaque accusantium tenetur facere autem mollitia fugiat quod tempora modi, ab temporibus. At reiciendis voluptate modi, animi provident exercitationem nam voluptatibus fugiat, impedit, mollitia necessitatibus ipsam doloribus eligendi officiis sequi quibusdam earum libero nemo eaque. Nemo hic, eveniet, nobis cupiditate iure quia non molestias eius.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora sit placeat facere corporis eos quam fugiat asperiores voluptatibus molestias, unde nam cupiditate recusandae deserunt neque, quasi iste quia quos delectus. Veniam, ab suscipit a sint dolorem illum quidem quaerat! Deserunt minus impedit fugit quae, at mollitia, libero vel maxime eligendi eveniet voluptatum unde, earum placeat dicta animi ipsa porro dolorem delectus expedita necessitatibus numquam eius nam cumque suscipit. Error nostrum est voluptate, reprehenderit obcaecati ad veniam atque quos tenetur nisi illo ducimus omnis quas quis. Vero blanditiis voluptatibus, esse, laborum facere, facilis qui, possimus magni eum reiciendis aliquid molestiae.
-        </p>
+        {{ lipsum(3) }}
         <br />
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/2xGu1Dn_kW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br /><br />
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, vitae facilis voluptate rem. Sapiente illo beatae quam eveniet quo ipsum tempora, commodi esse ex iusto mollitia, nisi quod repellat magnam dicta laborum ratione illum molestias labore voluptatibus, ea, similique quibusdam nihil! Eaque, nulla quam ipsa. Eum exercitationem excepturi nihil quos alias qui rem recusandae voluptatum minima. Sit possimus, beatae veniam suscipit ratione illum enim expedita nam eos distinctio minima itaque soluta, perspiciatis nostrum necessitatibus asperiores maxime fugit accusamus, voluptate veritatis id dolorum earum obcaecati voluptatibus harum. Corporis harum, perspiciatis voluptates, iusto aperiam velit voluptate officia numquam reiciendis alias cupiditate perferendis.
-        </p>
+        {{ lipsum(2) }}
     </div>
     <div class="col-3">
         {% include "about_sidebar.html.j2" %}
