--- a/web/templates/add_publication.html.j2
+++ b/web/templates/add_publication.html.j2
@@ -38,7 +38,7 @@
                     <label for="authors">
                         Author(s): <span class="text-danger">*</span><br />
                     </label>
-                    <input type="text" class="form-control" placeholder="In SPP BibTeX format (Lastname1, Firstname1 and Lastname2, Firstname2 Secondname2 and ...)" id="authors" name="authors" required />
+                    <input type="text" class="form-control" placeholder="In SPP BibTeX format (e.g. Einstein, Albert and Planck, Max Karl Ernst Ludwig and Dirac, Paul Adrien Maurice)" id="authors" name="authors" required />
                 </div>
                 <div class="form-group">
                     <label for="title">Title: <span class="text-danger">*</span>
@@ -49,7 +49,7 @@
                     <div class="row">
                         <div class="col">
                             <label for="journal">Journal: <span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" placeholder="Your answer here" id="journal" name="journal" required />
+                            <input type="text" class="form-control" placeholder="Official abbreviations are acceptable" id="journal" name="journal" required />
                         </div>
                         <div class="col-2">
                             <label for="volume">Volume: <span class="text-danger">*</span></label>
