--- a/web/templates/research.html.j2
+++ b/web/templates/research.html.j2
@@ -13,23 +13,15 @@
 
 <div class="row">
     <div class="col">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis distinctio nihil atque animi quidem odit itaque? Voluptates et laborum omnis, modi repellendus doloribus, consequatur ratione commodi aspernatur voluptatum vitae rerum dolorem, eveniet totam ullam voluptate, voluptatem maiores. Corporis asperiores maiores officia expedita odio laboriosam, excepturi facilis fuga necessitatibus, amet!
-            <ul>
+        {{ lipsum(1) }}
+        <ul>
+            {% for i in range(3) %}
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque molestiae repellat praesentium repudiandae recusandae cupiditate molestias, deserunt ad deleniti accusamus.
+                    {{ lipsum(1) }}
                 </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum quam dolorum accusamus vel a error.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis voluptas nemo dolorum, eum natus fugiat id minima perferendis quaerat quae, perspiciatis deserunt dolores cum!
-                </li>
-            </ul>
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum dolor optio ratione? Enim natus consequuntur earum ab numquam, cum tenetur quam, dignissimos esse impedit aliquid nobis, nostrum distinctio rerum. Labore repellat, aspernatur facere molestiae sed explicabo. Distinctio praesentium eaque expedita sed labore eos amet accusamus rem odio qui. Esse, omnis?
-        </p>
+            {% endfor %}
+        </ul>
+        {{ lipsum(2) }}
         <br />
     </div>
     <div class="col-3">
