--- a/web/templates/layout.html.j2
+++ b/web/templates/layout.html.j2
@@ -3,20 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} | Instrumentation Physics Laboratory</title>
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/jquery.js"></script>
-	<script src="/js/popper.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/jquery.dataTables.js"></script>
-    <script src="/js/dataTables.bootstrap4.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}"/>
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/popper.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.dataTables.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/dataTables.bootstrap4.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/dataTables.bootstrap4.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/custom.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="/js/bs_init.js"></script>
+    <script src="{{ url_for('static', filename='js/bs_init.js') }}"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -27,7 +27,7 @@
     <nav class="nav navbar navbar-expand-lg navbar-light bg-light font-weight-bold sticky-top" role="navigation">
     	<div class="container-fluid">
     		<div class="navbar-header col-sm-3">
-    			<a class="navbar-brand" href="/"><img src="images/IPL Logo.png" style="max-width: 100%; height: auto"></a>
+    			<a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='images/IPL Logo.png') }}" style="max-width: 100%; height: auto"></a>
     		</div>
     		<button type="button" class="navbar-toggler navbar-toggler-right collapsed" data-toggle="collapse" data-target="#instru-navbar" aria-controls="instru-navbar" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="sr-only">Toggle navigation</span>
@@ -100,10 +100,10 @@
                 &copy; {{ now.year }} Instrumentation Physics Laboratory
             </div>
             <div class="col" style="height: 100px">
-                <a href="http://upd.edu.ph/" target="_blank"><img src="images/UP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-                <a href="http://www.science.upd.edu.ph/" target="_blank"><img src="images/CS.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-                <a href="http://www.nip.upd.edu.ph/" target="_blank"><img src="images/National_Institute_of_Physics_logo.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
-    			<a href="http://spp-online.org/" target="_blank"><img src="images/SPP.png" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://upd.edu.ph/" target="_blank"><img src="{{ url_for('static', filename='images/UP.png') }}" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://www.science.upd.edu.ph/" target="_blank"><img src="{{ url_for('static', filename='images/CS.png') }}" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+                <a href="http://www.nip.upd.edu.ph/" target="_blank"><img src="{{ url_for('static', filename='images/National_Institute_of_Physics_logo.png')}}" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
+    			<a href="http://spp-online.org/" target="_blank"><img src="{{ url_for('static', filename='images/SPP.png') }}" class="img-fluid" style="height: 100%; padding: 20px 5px 0 5px"></a>
             </div>
         </div>
     </footer>
