--- a/web/templates/research.html.j2
+++ b/web/templates/research.html.j2
@@ -23,6 +23,16 @@
         </ul>
         {{ lipsum(2) }}
         <br />
+        <div class="card-columns">
+            {% set groups = ["Team One", "Synchronization & BioOptics", "Video & Image Processing", "Complexity Science Group", "CX Team"] %}
+            {% for group in groups %}
+                <div class="card">
+                    <div class="card-body text-center">
+                        <a href="#" class="stretched-link"><h4 class="card-title">{{ group }}</h4></a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
     <div class="col-3">
         {% include "research_sidebar.html.j2" %}
