--- a/frontend/static/frontend/js/components/App.scss
+++ b/frontend/static/frontend/js/components/App.scss
@@ -1,6 +1,17 @@
-.container {
-    align-items: 'center';
+.Container {
     display: flex;
-    height: 100vh;
+    align-items: center;
     justify-content: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.App {
+    display: block;
+    text-align: center;
+}
+
+.Logo {
+    margin: 50px;
+    width: 50vh;
 }
